--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,13 @@
 .App {
-  text-align: center;
+
+    text-align: center;
+    height: 100vh;
+    width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+
 }
 
 .App-logo {
