--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -1,9 +1,17 @@
+.nav-container{
+    display:flex;
+    color: #ffff;
+    justify-content: center;
+}
 .navMenuItems {
     display:flex;
+    flex-direction: column;
+    justify-content: left;
+    padding: 20px;
 }
 
 .navMenuItems li {
-    border: 1px solid black;
+    border: 1px solid;
     display: block;
     min-width: 7.5rem;
     height: 2.75rem;
@@ -11,5 +19,7 @@
     padding: 0 1.25rem 0 1.45rem;
     text-transform: uppercase;
     letter-spacing: 0.2rem;
-    font-size: 0.8rem;
+    font-size: 1rem;
+    font-style: bold;
+    border-radius: 4px;
 }
