finish team roster and added admin features to add to player's score

--- a/client/src/components/score.css
+++ b/client/src/components/score.css
@@ -15,6 +15,14 @@
     border-bottom: 1px solid #ffffff;
     padding-bottom: 3px;
 }
-
+.versusScore{
+    height: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.versusScore h1{
+    border-bottom: none;
+}
 
 /* overflow-y: scroll; */
