--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,6 +10,15 @@
 
 }
 
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+a:hover {
+   color: #00F
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
